[package]
name = "serial_tcp_bridge"
authors = ["Caleb Fletcher <caleb@fletcher.cf>"]
version = "0.4.0"
edition = "2018"
repository = "https://github.com/calebfletcher/SerialTCPBridge"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
serialport = "4.0.1"
log = "0.4"
env_logger = "0.9.0"
